test: stabilize integration and controller test suites